--- a/WooCommerce/Classes/ViewRelated/ReusableViews/TwoColumnTableViewCell.xib
+++ b/WooCommerce/Classes/ViewRelated/ReusableViews/TwoColumnTableViewCell.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait">
+    <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -11,24 +11,24 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="default" indentationWidth="10" rowHeight="48" id="KGk-i7-Jjw" customClass="TwoColumnTableViewCell" customModule="WooCommerce" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="48"/>
+        <tableViewCell contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="default" indentationWidth="10" rowHeight="52" id="KGk-i7-Jjw" customClass="TwoColumnTableViewCell" customModule="WooCommerce" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="52"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="47.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="51.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TS0-RN-yRd">
-                        <rect key="frame" x="16" y="16" width="288" height="17.5"/>
+                        <rect key="frame" x="16" y="19" width="288" height="14"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" preservesSuperviewLayoutMargins="YES" text="Total Orders" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EjV-xl-7FC">
-                                <rect key="frame" x="0.0" y="0.0" width="268.5" height="17.5"/>
+                                <rect key="frame" x="0.0" y="0.0" width="268.5" height="14"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" verticalHuggingPriority="251" preservesSuperviewLayoutMargins="YES" text="27" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RIm-Dq-v75" customClass="PaddedLabel" customModule="WooCommerce" customModuleProvider="target">
-                                <rect key="frame" x="268.5" y="0.0" width="19.5" height="17.5"/>
+                                <rect key="frame" x="268.5" y="0.0" width="19.5" height="14"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -41,10 +41,10 @@
                     </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="TS0-RN-yRd" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="0YR-eS-PX9"/>
-                    <constraint firstAttribute="trailing" secondItem="TS0-RN-yRd" secondAttribute="trailing" constant="16" id="FMA-9T-asM"/>
-                    <constraint firstAttribute="bottom" secondItem="TS0-RN-yRd" secondAttribute="bottom" constant="14" id="WvZ-WR-BXe"/>
-                    <constraint firstItem="TS0-RN-yRd" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="qiN-ic-3Lq"/>
+                    <constraint firstItem="TS0-RN-yRd" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="0YR-eS-PX9"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="TS0-RN-yRd" secondAttribute="trailing" id="FMA-9T-asM"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="TS0-RN-yRd" secondAttribute="bottom" constant="8" id="WvZ-WR-BXe"/>
+                    <constraint firstItem="TS0-RN-yRd" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="8" id="qiN-ic-3Lq"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
