--- a/WooCommerce/Classes/ViewRelated/ReusableViews/TwoColumnLabelView.xib
+++ b/WooCommerce/Classes/ViewRelated/ReusableViews/TwoColumnLabelView.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -17,13 +17,13 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="240" verticalHuggingPriority="240" horizontalCompressionResistancePriority="1000" text="Payment subline item" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Td-Am-Wbd">
-                    <rect key="frame" x="0.0" y="0.0" width="301.5" height="73"/>
+                    <rect key="frame" x="0.0" y="0.0" width="301.5" height="67"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalCompressionResistancePriority="1000" text="$823.00" textAlignment="natural" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v4f-dh-0ZA">
-                    <rect key="frame" x="309.5" y="0.0" width="65.5" height="73"/>
+                    <rect key="frame" x="309.5" y="0.0" width="65.5" height="67"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -32,7 +32,7 @@
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="3Td-Am-Wbd" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="0kO-Vk-ouZ"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="3Td-Am-Wbd" secondAttribute="bottom" priority="750" id="6xK-5K-Ys6"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="3Td-Am-Wbd" secondAttribute="bottom" priority="750" constant="6" id="6xK-5K-Ys6"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="v4f-dh-0ZA" secondAttribute="trailing" id="AhK-69-dl9"/>
                 <constraint firstItem="3Td-Am-Wbd" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="EQw-xJ-Ktb"/>
                 <constraint firstItem="v4f-dh-0ZA" firstAttribute="centerY" secondItem="3Td-Am-Wbd" secondAttribute="centerY" id="JIQ-v9-Vuc"/>
