--- a/WooCommerce/Classes/ViewRelated/Orders/Cells/CustomerInfoTableViewCell.xib
+++ b/WooCommerce/Classes/ViewRelated/Orders/Cells/CustomerInfoTableViewCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,35 +19,41 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="129.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="KmX-Sc-g7S">
-                        <rect key="frame" x="16" y="20" width="288" height="90"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalCentering" alignment="top" baselineRelativeArrangement="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KmX-Sc-g7S">
+                        <rect key="frame" x="16" y="19" width="288" height="92"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c05-76-euV">
-                                <rect key="frame" x="0.0" y="0.0" width="288" height="20.5"/>
+                                <rect key="frame" x="0.0" y="0.0" width="96" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pQe-4r-eVj" userLabel="Full name Label">
-                                <rect key="frame" x="0.0" y="20.5" width="288" height="0.0"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Full name label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pQe-4r-eVj" userLabel="Full name Label">
+                                <rect key="frame" x="0.0" y="26.5" width="114" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="240" text="Multiline, localized address that uses cnpostaladdressformatter" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KJW-Ch-VgS">
-                                <rect key="frame" x="0.0" y="20.5" width="288" height="69.5"/>
+                                <rect key="frame" x="0.0" y="51" width="285.5" height="41"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
+                        <constraints>
+                            <constraint firstItem="pQe-4r-eVj" firstAttribute="top" secondItem="c05-76-euV" secondAttribute="bottom" constant="6" id="4j9-na-gh0"/>
+                            <constraint firstAttribute="bottom" secondItem="KJW-Ch-VgS" secondAttribute="bottom" id="JDe-aB-aXw"/>
+                            <constraint firstItem="c05-76-euV" firstAttribute="top" secondItem="KmX-Sc-g7S" secondAttribute="top" id="UT9-mn-T67"/>
+                            <constraint firstItem="KJW-Ch-VgS" firstAttribute="top" secondItem="pQe-4r-eVj" secondAttribute="bottom" constant="4" id="xaS-XF-3nn"/>
+                        </constraints>
                     </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottomMargin" secondItem="KmX-Sc-g7S" secondAttribute="bottom" constant="9" id="BQ1-xd-9NW"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="KmX-Sc-g7S" secondAttribute="bottom" constant="8" id="BQ1-xd-9NW"/>
                     <constraint firstItem="KmX-Sc-g7S" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="Jbu-t6-r9Z"/>
                     <constraint firstAttribute="trailingMargin" secondItem="KmX-Sc-g7S" secondAttribute="trailing" id="MUh-VH-vld"/>
-                    <constraint firstItem="KmX-Sc-g7S" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="9" id="Qer-n9-0Wh"/>
+                    <constraint firstItem="KmX-Sc-g7S" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="8" id="Qer-n9-0Wh"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
