--- a/WooCommerce/Classes/ViewRelated/Orders/Cells/ProductDetailsTableViewCell.xib
+++ b/WooCommerce/Classes/ViewRelated/Orders/Cells/ProductDetailsTableViewCell.xib
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="123" id="KGk-i7-Jjw" customClass="ProductDetailsTableViewCell" customModule="WooCommerce" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ProductDetailsTableViewCell" rowHeight="123" id="KGk-i7-Jjw" customClass="ProductDetailsTableViewCell" customModule="WooCommerce" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="123"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -21,26 +20,26 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="p6h-Fq-FjW">
-                        <rect key="frame" x="16" y="16" width="36" height="36"/>
+                        <rect key="frame" x="16" y="19" width="44" height="44"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="36" id="9vH-gW-wOd"/>
-                            <constraint firstAttribute="height" constant="36" id="hcJ-qM-Kx2"/>
+                            <constraint firstAttribute="width" constant="44" id="9vH-gW-wOd"/>
+                            <constraint firstAttribute="height" constant="44" id="hcJ-qM-Kx2"/>
                         </constraints>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="En5-gn-p39">
-                        <rect key="frame" x="68" y="16" width="236" height="94"/>
+                        <rect key="frame" x="76" y="19" width="228" height="85"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HX7-V5-bhX">
-                                <rect key="frame" x="0.0" y="0.0" width="236" height="34"/>
+                                <rect key="frame" x="0.0" y="0.0" width="228" height="45"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The Title Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="14R-zK-tgC">
-                                        <rect key="frame" x="0.0" y="0.0" width="204.5" height="34"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="188.5" height="45"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" text="893" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pPE-SE-pY7">
-                                        <rect key="frame" x="204.5" y="0.0" width="31.5" height="34"/>
+                                        <rect key="frame" x="196.5" y="0.0" width="31.5" height="45"/>
                                         <constraints>
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="20" id="bIk-vq-m2l"/>
                                         </constraints>
@@ -52,29 +51,22 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="pPE-SE-pY7" secondAttribute="trailing" id="0CJ-5r-B3p"/>
-                                    <constraint firstItem="pPE-SE-pY7" firstAttribute="leading" secondItem="14R-zK-tgC" secondAttribute="trailing" id="4EN-45-GO3"/>
                                     <constraint firstItem="14R-zK-tgC" firstAttribute="leading" secondItem="HX7-V5-bhX" secondAttribute="leading" id="BTS-zX-yTf"/>
                                     <constraint firstAttribute="bottom" secondItem="14R-zK-tgC" secondAttribute="bottom" id="D6W-2W-XJG"/>
                                     <constraint firstAttribute="bottom" secondItem="pPE-SE-pY7" secondAttribute="bottom" id="LTg-Pt-VRG"/>
                                     <constraint firstItem="pPE-SE-pY7" firstAttribute="top" secondItem="HX7-V5-bhX" secondAttribute="top" id="dNy-6E-PyO"/>
-                                    <constraint firstItem="pPE-SE-pY7" firstAttribute="leading" secondItem="14R-zK-tgC" secondAttribute="trailing" id="eaR-Sk-4Cd"/>
                                     <constraint firstItem="14R-zK-tgC" firstAttribute="top" secondItem="HX7-V5-bhX" secondAttribute="top" id="jFm-CK-gS7"/>
+                                    <constraint firstItem="pPE-SE-pY7" firstAttribute="leading" secondItem="14R-zK-tgC" secondAttribute="trailing" constant="8" id="lJh-P7-t92"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total price (item price x qty)" textAlignment="natural" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IBM-H2-zE2">
-                                <rect key="frame" x="0.0" y="38" width="236" height="16"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tax label" textAlignment="natural" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P8K-6Z-2Hh">
-                                <rect key="frame" x="0.0" y="58" width="236" height="16"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SKU" textAlignment="natural" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7JH-rt-n9v">
-                                <rect key="frame" x="0.0" y="78" width="236" height="16"/>
+                                <rect key="frame" x="0.0" y="49" width="228" height="16"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total price (item price x qty)" textAlignment="natural" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IBM-H2-zE2">
+                                <rect key="frame" x="0.0" y="69" width="228" height="16"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -84,9 +76,9 @@
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailingMargin" secondItem="En5-gn-p39" secondAttribute="trailing" id="7vI-QZ-4so"/>
-                    <constraint firstItem="p6h-Fq-FjW" firstAttribute="firstBaseline" secondItem="En5-gn-p39" secondAttribute="firstBaseline" id="F6u-Vf-Qby"/>
-                    <constraint firstAttribute="bottom" secondItem="En5-gn-p39" secondAttribute="baseline" constant="16" id="Rmx-Nw-E9R"/>
-                    <constraint firstItem="En5-gn-p39" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="VsH-Qa-5gp"/>
+                    <constraint firstItem="p6h-Fq-FjW" firstAttribute="top" secondItem="En5-gn-p39" secondAttribute="top" id="F6u-Vf-Qby"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="En5-gn-p39" secondAttribute="bottom" constant="8" id="Rmx-Nw-E9R"/>
+                    <constraint firstItem="En5-gn-p39" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="8" id="VsH-Qa-5gp"/>
                     <constraint firstItem="p6h-Fq-FjW" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="WkU-sH-Aqw"/>
                     <constraint firstItem="En5-gn-p39" firstAttribute="leading" secondItem="p6h-Fq-FjW" secondAttribute="trailing" constant="16" id="Yht-tO-bpS"/>
                 </constraints>
@@ -98,7 +90,6 @@
                 <outlet property="productImageView" destination="p6h-Fq-FjW" id="bIw-1F-5GW"/>
                 <outlet property="quantityLabel" destination="pPE-SE-pY7" id="ir4-Ou-SuU"/>
                 <outlet property="skuLabel" destination="7JH-rt-n9v" id="U07-2n-W3b"/>
-                <outlet property="taxLabel" destination="P8K-6Z-2Hh" id="r9r-so-K5m"/>
             </connections>
             <point key="canvasLocation" x="62" y="96.5"/>
         </tableViewCell>
